--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@
 	--board-size-l: 500px;
 	--board-size-m: 400px;
 	--board-size-s: 300px;
+
+	--bgColor: hsl(220, 25%, 50%);
 }
+
 body{
 	font-family: arial;
 	font-size: 14px;
@@ -18,70 +21,76 @@ body{
 
 
 .wraper{
-	display: grid;
-	place-items: center;
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+	
 	height: 100vh;
-	background: hsl(220, 25%, 50%);
+	background: var(--bgColor);
 }
 .board{
+	position: relative;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 
-	gap: 4px; 
-/*	padding: 4px;*/
+	gap: 2px; 
 
 	height: var(--board-size-m);
 	width: var(--board-size-m);
-	background: #fff8;
+	
+
+	background: radial-gradient(#fff6, transparent 80%);
+
+	z-index: 1;
+	overflow: hidden;
 }
+.fade-dot{
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	width: 300px;
+	height: 300px;
+	
+	z-index: 2;
+	border-radius: 50%;
+	background: radial-gradient(#fff9, transparent);
+}
+
 
 .board > .sqr{
 	position: relative;
-	display: grid;
+	display: grid; 
 	place-items: center;
+
 	
 	color: #fff;
 	font-size: 4em;
 	font-weight: 600;
 
-/*	background: #28e;*/
-	background: hsl(220, 25%, 50%);
-
-
+	background: var(--bgColor);
 	cursor: pointer;
-	transition: transform 0.6s ease, box-shadow 0.6s ease;
-	z-index: 1;
+	z-index: 3;
+	transition: background 0.3s ease;
 }
-
-.board > .sqr::before{
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-
-	width: 100%;
-	height: 100%;
-
-	/*background: radial-gradient(transparent 20%, hsl(220, 30%, 50%));*/
-}
-
-.board > .sqr:hover::before{
-	/*background: radial-gradient(transparent 60%, hsl(220, 30%, 50%));*/
-}
-.board > .sqr:hover{
-	/* transform: scale(1.2); */
-	z-index: 2;
-	box-shadow: 0px 0px 10px #fff inset;
-}
+/* .board > .sqr:hover{
+	background: radial-gradient(#fff4, transparent 20%);
+} */
 
 .defaultSpan{
 	opacity: 0;
 	pointer-events: none;
 }
 
-.userSelection{
-	pointer-events: none;
+.sectedSqr{
+	pointer-events: none
 }
+
+
 .userSelection > span{
 	color: #2e2;
+}
+.pcSelection > span{
+	color: #e22;
 }
