--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body{
 	flex-wrap: wrap;
 	flex-flow: column; 
 	
-	height: 100%;
+	height: 100vh;
 	background: var(--bgColor);
 }
 
@@ -230,6 +230,10 @@ body{
 
 @media screen and (width < 930px) {
 
+	.wrapper{
+		height: 100%;
+	}
+	
 	.table-3-r{
 		grid-template-columns: 1fr;	
 	}
